# napari-manual-transforms

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_manual_transforms/: __init__.py  _model.py  _tform_widget.py  _util.py  _widget.py  napari.yaml
tests/: test_widget.py
